# seminar3_rusu

./: Auto.cpp  Auto.h  CMakeLists.txt  LKW.cpp  PKW.cpp  PKW.h  main.cpp
